--- a/index.html
+++ b/index.html
@@ -1,6 +1,135 @@
 <html>
-    <head>
-        <title>It works!</title>
+
+	<head>
+    	<title>witty title here</title>
+
+        <style type="text/css">
+		
+			/* import fonts, and code highlighting */
+			@import url("http://fonts.googleapis.com/css?family=Muli");
+
+			/* framework */
+			html, body { background:#151515; color:#eeeeee; height:100%; font-family: 'Muli', Consolas, monospace !important; }
+			.wrapper { height:auto !important; height:100%; min-height:80%; margin: 0 auto -50px; width: 1000px; }
+			.push { height: 30px; }
+			.header { width: 99%; text-align: right; font-size: 14pt; margin: 20px 0 40px 0; }
+			.title { text-align: center; font-size: 26pt; font-family: 'Muli', Consolas, monospace !important; }
+			.footer { height: 30px; text-align: center; font-size: 8pt; }
+			.left { width: 530px; float: left; font-size: 12pt; }
+			.right { width:450px; float:right; font-size:12pt; }
+			p { width: 90%; margin-left: auto; margin-right: auto; font-size: 14px; }
+			p img { display: block; margin-left: auto; margin-right: auto; }
+			.wow { margin: 0 0 30px 0; }
+			
+
+			/* special text */
+			blockquote {
+				background: #202020; color: #c0c0c0;
+				border: 1px dashed #ff7d0a;
+				font-family: 'Muli', Consolas, monospace !important;
+				white-space:nowrap; overflow:auto;
+			}
+			li { font-size: 14px; }
+			ul { font-size: 14px; }
+			
+
+			/* links */
+			a { color: #ff7d0d; text-decoration: none; }
+			a:visited { text-decoration: none; }
+			a:hover { text-decoration: underline; }
+			a:active { text-decoration: underline; }
+
+			/* code syntax highlighting */
+			.prettyprint { font-family: Menlo, 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Consolas, monospace; font-size: 12px; }
+			.pln { color: #cccccc; }
+
+			@media screen {
+  				.atn, .dec, .lit { color: #f99157; }
+  				.atv { color: #66cccc; }
+  				.clo, .opn, .pun { color: #cccccc; }
+  				.com { color: #999999; }
+  				.fun, .typ { color: #6699cc; }
+  				.kwd { color: #cc99cc; }
+  				.str { color: #99cc99; }
+				.tag, .var { color: #f2777a; }
+			}
+
+			@media print, projection {
+				.atn { color: #440044; }
+				.atv { color: #006600; }
+				.clo, .opn, .pun { color: #444400; }
+				.com { color: #600; font-style: italic; }
+				.kwd, .tag { color: #006; font-weight: bold; }
+				.lit { color: #004444; }
+				.str { color: #006600; }
+				.typ { color: #404; font-weight: bold; }
+			}
+
+
+			/* text colors */
+			.deathknight	{ color: #c41f3b; }		.opera			{ color: #cc0f16; }	
+			.demonhunter	{ color: #a330c9; }		.facebook		{ color: #3b5998; }
+			.druid			{ color: #ff7d0a; }		.instagram		{ color: #a66d58; }
+			.hunter			{ color: #abd473; }		.snapchat		{ color: #f9fb35; }
+			.mage			{ color: #69ccf0; }		.spotify		{ color: #accc3b; }
+			.monk			{ color: #00ff96; }		.tumblr			{ color: #456179; }
+			.paladin		{ color: #f58cba; }		.twitch			{ color: #6441a5; }
+			.priest			{ color: #ffffff; }		.twitter		{ color: #5db5de; }
+			.rogue			{ color: #fff569; }		.winamp			{ color: #f58812; }
+			.shaman			{ color: #0070de; }
+			.warlock		{ color: #9482c9; }
+			.warrior		{ color: #c79c6e; }
+			
+        </style>
     </head>
-    <body>It works!</body>
+
+    <body>
+
+    	<!-- header -->
+    	<p class="header">
+        	<span style="font-size:32pt;">dustin sabecky</span><br/>
+            <a href="http://github.com/dsabecky" class="twitch">github</a> / <a href="http://twitter.com/dsabecky" class="twitter">twitter</a> / <a href="http://open.spotify.com/user/dsabecky" class="spotify">spotify</a>
+		</p>
+
+    	<div class="wrapper">
+
+    		<!-- left pane -->
+    		<div class="left">
+
+					<div class="title">my characters</div>
+					<p><a href="https://worldofwarcraft.com/en-us/character/us/area-52/haldu"><img src="https://i.imgur.com/vWOvjLS.png" /></a></p>
+					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/mileyx"><img src="https://i.imgur.com/WKsay1s.png" /></a></p>
+					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/dakibby"><img src="https://i.imgur.com/0qMoJZw.png" /></a></p>
+           				
+			</div>
+
+			<!-- right pane -->
+			<div class="right">
+
+				<div class="title">about me</div>
+					<p>Words.</p>
+
+					<p>Amature programmer and wow player. I write cool <a href="https://wago.io/p/dakibby#1739" class="opera" target="_blank">weakauras</a> and help with a couple of addons you might use.</p>
+
+					<p>I used to post many of my scripts and code snippets that I write to my <a href="https://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="http://dsabecky.tumblr.com" class="tumblr">tumblr</a>.</p>
+
+					<p>I used to host a shoutcast server, however my discovery of <a href="http://open.spotify.com/user/dsabecky" class="spotify">Spotify</a> some time ago has eliminated my want of a radio station.</p>
+
+				<div class="title">venomIRC</div>
+					<p>I wrote a set of scripts for <a href="http://mirc.com" target="_blank"><span class="shaman">m</span><span class="opera">IR</span><span class="rogue">C</span></a> called venomIRC that adds a lot of functionality to the program including support for automatically connecting to multiple servers, as well as authenticating to them. <a href="https://dl.dropboxusercontent.com/u/35136/venomirc/venomIRC%202.1.5.zip">download</a> (<a href="http://pastebin.com/YhbGkZbQ" class="demonhunter">changelog</a>)</p>
+
+				<div class="wow"><center><div style="margin-top: 40px" class="fb-like" data-href="http://pentarserv.com" data-send="true" data-width="400" data-show-faces="true" data-font="tahoma" data-colorscheme="dark"></div></center></div>
+
+				<div class="push"></div>
+				<p class="footer">
+					"it's not the network!"<br/>
+					powered by <a href="http://dennys.com">Dennys</a> since 2006
+				</p>
+
+			</div>
+
+		</div>
+
+
+	</body>
 </html>
