--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style type="text/css">
 		
 			/* import fonts, and code highlighting */
-			@import url("http://fonts.googleapis.com/css?family=Muli");
+			@import url("httpss://fonts.googleapis.com/css?family=Muli");
 
 			/* framework */
 			html, body { background:#151515; color:#eeeeee; height:100%; font-family: 'Muli', Consolas, monospace !important; }
@@ -88,7 +88,7 @@
     	<!-- header -->
     	<p class="header">
         	<span style="font-size:32pt;">dustin sabecky</span><br/>
-            <a href="http://github.com/dsabecky" class="twitch">github</a> / <a href="http://twitter.com/dsabecky" class="twitter">twitter</a> / <a href="http://open.spotify.com/user/dsabecky" class="spotify">spotify</a>
+            <a href="https://github.com/dsabecky" class="twitch">github</a> / <a href="https://twitter.com/dsabecky" class="twitter">twitter</a> / <a href="https://open.spotify.com/user/dsabecky" class="spotify">spotify</a>
 		</p>
 
     	<div class="wrapper">
@@ -97,9 +97,9 @@
     		<div class="left">
 
 					<div class="title">my characters</div>
-					<p><a href="https://worldofwarcraft.com/en-us/character/us/area-52/haldu"><img src="https://i.imgur.com/vWOvjLS.png" /></a></p>
-					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/mileyx"><img src="https://i.imgur.com/WKsay1s.png" /></a></p>
-					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/dakibby"><img src="https://i.imgur.com/0qMoJZw.png" /></a></p>
+					<p><a href="httpss://worldofwarcraft.com/en-us/character/us/area-52/haldu"><img src="httpss://i.imgur.com/vWOvjLS.png" /></a></p>
+					<p><a href="httpss://worldofwarcraft.com/en-us/character/us/stormrage/mileyx"><img src="httpss://i.imgur.com/WKsay1s.png" /></a></p>
+					<p><a href="httpss://worldofwarcraft.com/en-us/character/us/stormrage/dakibby"><img src="httpss://i.imgur.com/0qMoJZw.png" /></a></p>
            				
 			</div>
 
@@ -109,21 +109,21 @@
 				<div class="title">about me</div>
 					<p>Words.</p>
 
-					<p>Amature programmer and wow player. I write cool <a href="https://wago.io/p/dakibby#1739" class="opera" target="_blank">weakauras</a> and help with a couple of addons you might use.</p>
+					<p>Amature programmer and wow player. I write cool <a href="httpss://wago.io/p/dakibby#1739" class="opera" target="_blank">weakauras</a> and help with a couple of addons you might use.</p>
 
-					<p>I used to post many of my scripts and code snippets that I write to my <a href="https://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="http://dsabecky.tumblr.com" class="tumblr">tumblr</a>.</p>
+					<p>I used to post many of my scripts and code snippets that I write to my <a href="httpss://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="https://dsabecky.tumblr.com" class="tumblr">tumblr</a>.</p>
 
-					<p>I used to host a shoutcast server, however my discovery of <a href="http://open.spotify.com/user/dsabecky" class="spotify">Spotify</a> some time ago has eliminated my want of a radio station.</p>
+					<p>I used to host a shoutcast server, however my discovery of <a href="https://open.spotify.com/user/dsabecky" class="spotify">Spotify</a> some time ago has eliminated my want of a radio station.</p>
 
 				<div class="title">venomIRC</div>
-					<p>I wrote a set of scripts for <a href="http://mirc.com" target="_blank"><span class="shaman">m</span><span class="opera">IR</span><span class="rogue">C</span></a> called venomIRC that adds a lot of functionality to the program including support for automatically connecting to multiple servers, as well as authenticating to them. <a href="https://dl.dropboxusercontent.com/u/35136/venomirc/venomIRC%202.1.5.zip">download</a> (<a href="http://pastebin.com/YhbGkZbQ" class="demonhunter">changelog</a>)</p>
+					<p>I wrote a set of scripts for <a href="https://mirc.com" target="_blank"><span class="shaman">m</span><span class="opera">IR</span><span class="rogue">C</span></a> called venomIRC that adds a lot of functionality to the program including support for automatically connecting to multiple servers, as well as authenticating to them. <a href="httpss://dl.dropboxusercontent.com/u/35136/venomirc/venomIRC%202.1.5.zip">download</a> (<a href="https://pastebin.com/YhbGkZbQ" class="demonhunter">changelog</a>)</p>
 
-				<div class="wow"><center><div style="margin-top: 40px" class="fb-like" data-href="http://pentarserv.com" data-send="true" data-width="400" data-show-faces="true" data-font="tahoma" data-colorscheme="dark"></div></center></div>
+				<div class="wow"><center><div style="margin-top: 40px" class="fb-like" data-href="https://pentarserv.com" data-send="true" data-width="400" data-show-faces="true" data-font="tahoma" data-colorscheme="dark"></div></center></div>
 
 				<div class="push"></div>
 				<p class="footer">
 					"it's not the network!"<br/>
-					powered by <a href="http://dennys.com">Dennys</a> since 2006
+					powered by <a href="https://dennys.com">Dennys</a> since 2006
 				</p>
 
 			</div>
