--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <style type="text/css">
 		
 			/* import fonts, and code highlighting */
-			@import url("httpss://fonts.googleapis.com/css?family=Muli");
+			@import url("https://fonts.googleapis.com/css?family=Muli");
 
 			/* framework */
 			html, body { background:#151515; color:#eeeeee; height:100%; font-family: 'Muli', Consolas, monospace !important; }
