--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     		<div class="left">
 
 					<div class="title">my characters</div>
-					<p><a href="httpss://worldofwarcraft.com/en-us/character/us/area-52/haldu"><img src="httpss://i.imgur.com/vWOvjLS.png" /></a></p>
-					<p><a href="httpss://worldofwarcraft.com/en-us/character/us/stormrage/mileyx"><img src="httpss://i.imgur.com/WKsay1s.png" /></a></p>
-					<p><a href="httpss://worldofwarcraft.com/en-us/character/us/stormrage/dakibby"><img src="httpss://i.imgur.com/0qMoJZw.png" /></a></p>
+					<p><a href="https://worldofwarcraft.com/en-us/character/us/area-52/haldu"><img src="https://i.imgur.com/vWOvjLS.png" /></a></p>
+					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/mileyx"><img src="https://i.imgur.com/WKsay1s.png" /></a></p>
+					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/dakibby"><img src="https://i.imgur.com/0qMoJZw.png" /></a></p>
            				
 			</div>
 
@@ -109,14 +109,14 @@
 				<div class="title">about me</div>
 					<p>Words.</p>
 
-					<p>Amature programmer and wow player. I write cool <a href="httpss://wago.io/p/dakibby#1739" class="opera" target="_blank">weakauras</a> and help with a couple of addons you might use.</p>
+					<p>Amature programmer and wow player. I write cool <a href="https://wago.io/p/dakibby#1739" class="opera" target="_blank">weakauras</a> and help with a couple of addons you might use.</p>
 
-					<p>I used to post many of my scripts and code snippets that I write to my <a href="httpss://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="https://dsabecky.tumblr.com" class="tumblr">tumblr</a>.</p>
+					<p>I used to post many of my scripts and code snippets that I write to my <a href="https://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="https://dsabecky.tumblr.com" class="tumblr">tumblr</a>.</p>
 
 					<p>I used to host a shoutcast server, however my discovery of <a href="https://open.spotify.com/user/dsabecky" class="spotify">Spotify</a> some time ago has eliminated my want of a radio station.</p>
 
 				<div class="title">venomIRC</div>
-					<p>I wrote a set of scripts for <a href="https://mirc.com" target="_blank"><span class="shaman">m</span><span class="opera">IR</span><span class="rogue">C</span></a> called venomIRC that adds a lot of functionality to the program including support for automatically connecting to multiple servers, as well as authenticating to them. <a href="httpss://dl.dropboxusercontent.com/u/35136/venomirc/venomIRC%202.1.5.zip">download</a> (<a href="https://pastebin.com/YhbGkZbQ" class="demonhunter">changelog</a>)</p>
+					<p>I wrote a set of scripts for <a href="https://mirc.com" target="_blank"><span class="shaman">m</span><span class="opera">IR</span><span class="rogue">C</span></a> called venomIRC that adds a lot of functionality to the program including support for automatically connecting to multiple servers, as well as authenticating to them. <a href="https://dl.dropboxusercontent.com/u/35136/venomirc/venomIRC%202.1.5.zip">download</a> (<a href="https://pastebin.com/YhbGkZbQ" class="demonhunter">changelog</a>)</p>
 
 				<div class="wow"><center><div style="margin-top: 40px" class="fb-like" data-href="https://pentarserv.com" data-send="true" data-width="400" data-show-faces="true" data-font="tahoma" data-colorscheme="dark"></div></center></div>
 
