soundcloud and twitch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 			/* framework */
 			html, body { background:#151515; color:#eeeeee; height:100%; font-family: 'Muli', Consolas, monospace !important; }
+			p { width: 90%; margin-left: auto; margin-right: auto; font-size: 14px; }
+			p img { display: block; margin-left: auto; margin-right: auto; }
 			.wrapper { height:auto !important; height:100%; min-height:80%; margin: 0 auto -50px; width: 1000px; }
 			.push { height: 30px; }
 			.header { width: 99%; text-align: right; font-size: 14pt; margin: 20px 0 40px 0; }
@@ -17,8 +19,6 @@
 			.footer { height: 30px; text-align: center; font-size: 8pt; }
 			.left { width: 530px; float: left; font-size: 12pt; }
 			.right { width:450px; float:right; font-size:12pt; }
-			p { width: 90%; margin-left: auto; margin-right: auto; font-size: 14px; }
-			p img { display: block; margin-left: auto; margin-right: auto; }
 			.wow { margin: 0 0 30px 0; }
 			
 
@@ -71,12 +71,12 @@
 			.demonhunter	{ color: #a330c9; }		.facebook		{ color: #3b5998; }
 			.druid			{ color: #ff7d0a; }		.instagram		{ color: #a66d58; }
 			.hunter			{ color: #abd473; }		.snapchat		{ color: #f9fb35; }
-			.mage			{ color: #69ccf0; }		.spotify		{ color: #accc3b; }
-			.monk			{ color: #00ff96; }		.tumblr			{ color: #456179; }
-			.paladin		{ color: #f58cba; }		.twitch			{ color: #6441a5; }
-			.priest			{ color: #ffffff; }		.twitter		{ color: #5db5de; }
-			.rogue			{ color: #fff569; }		.winamp			{ color: #f58812; }
-			.shaman			{ color: #0070de; }
+			.mage			{ color: #69ccf0; }		.soundcloud		{ color: #f85a0f; }
+			.monk			{ color: #00ff96; }		.spotify		{ color: #accc3b; }
+			.paladin		{ color: #f58cba; }		.tumblr			{ color: #456179; }
+			.priest			{ color: #ffffff; }		.twitch			{ color: #6441a5; }
+			.rogue			{ color: #fff569; }		.twitter		{ color: #5db5de; }
+			.shaman			{ color: #0070de; }		.winamp			{ color: #f58812; }
 			.warlock		{ color: #9482c9; }
 			.warrior		{ color: #c79c6e; }
 			
@@ -109,16 +109,14 @@
 				<div class="title">about me</div>
 					<p>Words.</p>
 
-					<p>Amature programmer and wow player. I write cool <a href="https://wago.io/p/dakibby#1739" class="opera" target="_blank">weakauras</a> and help with a couple of addons you might use.</p>
+					<p>I used to post many of my scripts and code snippets that I write to my <a href="https://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="https://dsabecky.tumblr.com" class="tumblr">tumblr</a>. I still occasionally make cool <a href="https://wago.io/p/dakibby#1739" class="opera">weakauras</a>. :)</p>
 
-					<p>I used to post many of my scripts and code snippets that I write to my <a href="https://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="https://dsabecky.tumblr.com" class="tumblr">tumblr</a>.</p>
+					<p>You can usually find me lurking in one of my favorite twitch streamers channels such as <a href="https://twitch.tv/trihex" class="warlock">trihex</a>, <a href="https://twitch.tv/cdew" class="shaman">cdew</a>, <a href="https://twitch.tv/fragnance" class="druid">fragnance</a>, and <a href="https://twitch.tv/timthetatman" class="rogue">timthetatman</a>. </p>
 
-					<p>I used to host a shoutcast server, however my discovery of <a href="https://open.spotify.com/user/dsabecky" class="spotify">Spotify</a> some time ago has eliminated my want of a radio station.</p>
+					<p>I used to host a shoutcast server, however my discovery of <a href="https://open.spotify.com/user/dsabecky" class="spotify">Spotify</a> and <a href="https://soundcloud.com/ayylmao1/likes" class="soundcloud">soundcloud</a> some time ago has eliminated my want of a radio station.</p>
 
 				<div class="title">venomIRC</div>
-					<p>I wrote a set of scripts for <a href="https://mirc.com" target="_blank"><span class="shaman">m</span><span class="opera">IR</span><span class="rogue">C</span></a> called venomIRC that adds a lot of functionality to the program including support for automatically connecting to multiple servers, as well as authenticating to them. <a href="https://dl.dropboxusercontent.com/u/35136/venomirc/venomIRC%202.1.5.zip">download</a> (<a href="https://pastebin.com/YhbGkZbQ" class="demonhunter">changelog</a>)</p>
-
-				<div class="wow"><center><div style="margin-top: 40px" class="fb-like" data-href="https://pentarserv.com" data-send="true" data-width="400" data-show-faces="true" data-font="tahoma" data-colorscheme="dark"></div></center></div>
+					<p>I wrote a set of scripts for <a href="https://mirc.com" target="_blank"><span class="shaman">m</span><span class="opera">IR</span><span class="rogue">C</span></a> called venomIRC that adds a lot of functionality to the program including support for automatically connecting to multiple servers, as well as authenticating to them. <a href="https://dl.dropboxusercontent.com/u/35136/venomirc/venomIRC%202.1.5.zip" target="_blank">download</a> (<a href="https://pastebin.com/YhbGkZbQ" class="demonhunter">changelog</a>)</p>
 
 				<div class="push"></div>
 				<p class="footer">
