--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     	<!-- header -->
     	<p class="header">
         	<span style="font-size:32pt;">dustin sabecky</span><br/>
-            <a href="https://github.com/dsabecky" class="twitch">github</a> / <a href="https://twitter.com/dsabecky" class="twitter">twitter</a> / <a href="https://open.spotify.com/user/dsabecky" class="spotify">spotify</a>
+        	<a href="https://github.com/dsabecky" class="twitch">github</a> / <a href="https://twitter.com/dsabecky" class="twitter">twitter</a> / <a href="https://open.spotify.com/user/dsabecky" class="spotify">spotify</a> / <a href="https://wago.io/p/haldu#11543" class="shaman">haldu#11543</a>
 		</p>
 
     	<div class="wrapper">
@@ -97,7 +97,7 @@
     		<div class="left">
 
 					<div class="title">my characters</div>
-					<p><a href="https://worldofwarcraft.com/en-us/character/us/area-52/haldu"><img src="https://i.imgur.com/vWOvjLS.png" /></a></p>
+					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/haldu"><img src="https://i.imgur.com/vWOvjLS.png" /></a></p>
 					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/mileyx"><img src="https://i.imgur.com/WKsay1s.png" /></a></p>
 					<p><a href="https://worldofwarcraft.com/en-us/character/us/stormrage/dakibby"><img src="https://i.imgur.com/0qMoJZw.png" /></a></p>
            				
@@ -109,7 +109,7 @@
 				<div class="title">about me</div>
 					<p>Words.</p>
 
-					<p>I used to post many of my scripts and code snippets that I write to my <a href="https://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="https://dsabecky.tumblr.com" class="tumblr">tumblr</a>. I still occasionally make cool <a href="https://wago.io/p/dakibby#1739" class="opera">weakauras</a>. :)</p>
+					<p>I used to post many of my scripts and code snippets that I write to my <a href="https://pastebin.com/u/dsabecky" class="demonhunter">pastebin</a> and my <a href="https://dsabecky.tumblr.com" class="tumblr">tumblr</a>. I still occasionally make cool <a href="https://wago.io/p/haldu#11543" class="opera">weakauras</a>. :)</p>
 
 					<p>You can usually find me lurking in one of my favorite twitch streamers channels such as <a href="https://twitch.tv/trihex" class="warlock">trihex</a>, <a href="https://twitch.tv/cdew" class="shaman">cdew</a>, <a href="https://twitch.tv/fragnance" class="druid">fragnance</a>, and <a href="https://twitch.tv/timthetatman" class="rogue">timthetatman</a>. </p>
 
